--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT=3000
-MONGODB_URL='mongodb+srv://bagalomkar945:l9SORPlR7omvh6zY@gofood.qhdhed6.mongodb.net/Go_Food'
+MONGODB_URL='mongodb+srv://parthbagal2004:MYOIexk73yfxbG3A@cluster0.tijwhp8.mongodb.net/'
