--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT=3000
-MONGODB_URL='mongodb+srv://parthbagal2004:MYOIexk73yfxbG3A@cluster0.tijwhp8.mongodb.net/'
+MONGODB_URL='mongodb+srv://parthbagal2004:MYOIexk73yfxbG3A@cluster0.tijwhp8.mongodb.net/gofoodmern'
